all stuff so far

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,9 +12,11 @@
     <div class="col-md-4">
       <h3> <%= @product.name %> </h3>
       <p> <%= number_to_currency @product.price.to_i %> </p>
-      <p><%= @product.description %></p> <br> 
+      <p><%= @product.description %></p> <br>
       <div class="center">
         <%= link_to "Add to cart", add_cart_path, method: :post, class: 'btn btn-primary' %>
+        &nbsp; &nbsp; &nbsp;
+        <%= link_to "Back", root_path, class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
