--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,45 +3,58 @@
   <h1 class="panel-title">Shopping Cart</h1>
   </div>
   <div class="panel-body">
-    <div class="table-responsive">
-      <table class="table" role="grid">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @cart.items.each do |item| %>
+    <% if @cart.items.size == 0 %>
+      <p class="text-center">
+        Your shopping cart is empty!
+      </p>
+      <p>
+        <center>
+          <%= link_to "Continue Shopping", products_path, class: "btn btn-primary" %>
+      </center>
+      </p>
+    <% else %>
+      <div class="table-responsive">
+        <table class="table" role="grid">
+          <thead>
             <tr>
-              <td> 
-                <%= image_tag item.product.full_image_url, size: "50x50" %> <%= link_to item.product.name, item.product %>
-              </td>
-              <td><%= item.quantity %></td>
-              <td><%= number_to_currency item.total_price %></td>
-              <td>
-                  <%= link_to remove_item_path(item), method: :delete, data: { confirm: 'Are you sure?' } do %>
-                  <span class="glyphicon glyphicon-remove" ></span>
-                <% end %>
-              </td>
+              <th>Name</th>
+              <th>Quantity</th>
+              <th>Unit Price</th>
+              <th></th>
             </tr>
-          <% end %>
-        </tbody>
-        <tr>
-          <td> </td>
-          <td> </td>
-          <td><%= number_to_currency @cart.total_price %> </td>
-          <td> </td>
-        </tr>
-      </table>
-    </div>
-    <p>
-      <center>
-      <%= link_to "Checkout", checkout_cart_path, class: "btn btn-primary" %>
-      &nbsp; &nbsp; <%= link_to "Continue Shopping", products_path, class: "btn btn-primary" %>
-    </center>
-    </p>
+          </thead>
+          <tbody>
+            <% @cart.items.each do |item| %>
+              <tr>
+                <td> 
+                  <%= image_tag item.product.full_image_url, size: "50x50" %> <%= link_to item.product.name, item.product %>
+                </td>
+                <td><%= item.quantity %></td>
+                <td><%= number_to_currency item.product.price %></td>
+                <td>
+                    <%= link_to remove_item_cart_path(item), method: :delete, data: { confirm: 'Are you sure?' } do %>
+                    <span class="glyphicon glyphicon-remove" ></span>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+          <tr>
+            <td> </td>
+            <td> <b>Total:</b></td>
+            <td><%= number_to_currency @cart.total_price %> </td>
+            <td> </td>
+          </tr>
+        </table>
+      </div>
+      <p>
+        <center>
+        <%= link_to "Continue Shopping", products_path, class: "btn btn-primary" %>
+        &nbsp; &nbsp;
+        <%= link_to image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), express_checkout_orders_path %>
+
+      </center>
+      </p>
+    <% end %>
   </div>
 </div>
