--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,14 +4,7 @@
   </div>
   <div class="panel-body">
     <% if @cart.items.size == 0 %>
-      <p class="text-center">
-        Your shopping cart is empty!
-      </p>
-      <p>
-        <center>
-          <%= link_to "Continue Shopping", products_path, class: "btn btn-primary" %>
-      </center>
-      </p>
+      <%= render 'empty_cart' %>
     <% else %>
       <div class="table-responsive">
         <table class="table" role="grid">
@@ -32,7 +25,7 @@
                 <td><%= item.quantity %></td>
                 <td><%= number_to_currency item.product.price %></td>
                 <td>
-                    <%= link_to remove_item_cart_path(item), method: :delete, data: { confirm: 'Are you sure?' } do %>
+                  <%= link_to remove_item_cart_path(item.getproductid), method: :post, data: { confirm: 'Are you sure?' } do %>
                     <span class="glyphicon glyphicon-remove" ></span>
                   <% end %>
                 </td>
