--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -1,3 +1,4 @@
+<!-- Not using now -->
 <div class="panel panel-clr col-md-8 col-md-offset-2">
   <div class="panel-heading panel-clr">
   <h1 class="panel-title"> Checkout </h1>
