--- a/app/views/carts/_user_info_form.html.erb
+++ b/app/views/carts/_user_info_form.html.erb
@@ -1,3 +1,4 @@
+<!-- Not using now -->
 <%= form_for @order_form, url: orders_path, html: { class: 'well form-horizontal' } do |f| %>
   <%= f.fields_for :user, f.object.user do |u| %>
     <div class ="row">
